# nft-manager

./: .gitignore  Anchor.toml  LICENSE  README.md  build-verifiable.sh  check.sh  deploy-verifiable.sh  idl-deploy.sh  package.json
.github/actions/anchor/: action.yml
.github/workflows/: check.yml  ci-cd.yml
programs/nft-manager/: Cargo.toml
programs/nft-manager/src/: lib.rs
programs/nft-manager/src/constants/: mod.rs
programs/nft-manager/src/errors/: mod.rs
programs/nft-manager/src/instructions/: admin_withdraw_fees.rs  admin_withdraw_mint_fees.rs  burn_nft.rs  buy_nft.rs  create_collection.rs  create_user_account.rs  delist_nft.rs  finalize_fractionalize_nft.rs  finalize_mint_nft.rs  finalize_ownership_transfer.rs  fractionalize_nft.rs  initialize_nft_manager.rs  initialize_ownership_transfer.rs  list_nft.rs  mint_nft.rs  mod.rs  update_fees.rs  update_listing_price.rs  update_metadata.rs  user_withdraw.rs
programs/nft-manager/src/states/: fees_collector.rs  finalize_fractionalize_data.rs  finalize_mint_data.rs  listing.rs  mint_fees_collector.rs  mod.rs  nft_manager.rs  user.rs
programs/nft-manager/src/utils/: mod.rs
scripts/: adminWithdrawFees.ts  adminWithdrawMintFees.ts  burn.ts  buyNFT.ts  createUserAccount.ts  delist.ts  events.ts  finalizeMint.ts  finalizeOwnershipTransfer.ts  fractionalize.ts  getMints.ts  index.ts  init.ts  initializeOwnershipTransfer.ts  list.ts  mint.ts  updateFees.ts  updateListingPrice.ts  updateMetadata.ts  userWithdraw.ts
tests/: nft-manager.ts  utils.ts
