[package]
name = "nft-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-token-metadata-interface = "0.3.3"
spl-type-length-value = "0.4.3"
pyth-solana-receiver-sdk = "0.3.2"

# [dev-dependencies]
# solana-program-test = "1.18.26"
# solana-sdk = "1.18.26"
# solana-client = "1.18.26"
